--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Wintermutate/Week11-Hangman/issues"
   },
-  "homepage": "https://github.com/Wintermutate/Week11-Hangman#readme"
+  "homepage": "https://github.com/Wintermutate/Week11-Hangman#readme",
+  "dependencies": {
+    "inquirer": "^1.2.2",
+    "prompt": "^1.0.0"
+  }
 }
